# mlde.m.moduletemplate

./: CMakeLists.txt  README.md
src/: Activator.cpp  CMakeLists.txt  moonlightDE-module_template.desktop
